update footer link

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -616,7 +616,8 @@
       "help": "Help",
       "getVerified": "Get Verified",
       "FAQ": "FAQ",
-      "support": "Support"
+      "support": "Support",
+      "docs":"Docs"
     },
     "followUs": {
       "followUs": "Follow Us"
