--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -602,7 +602,8 @@
       "help": "Помощь",
       "getVerified": "Пройти верификацию",
       "FAQ": "FAQ",
-      "support": "Поддержка"
+      "support": "Поддержка",
+      "docs": "Docs"
     },
     "followUs": {
       "followUs": "Следуйте за нами"
