--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -607,7 +607,8 @@
       "help": "帮助",
       "getVerified": "成为签约艺术家",
       "FAQ": "FAQ",
-      "support": "帮助"
+      "support": "帮助",
+      "docs":"文档"
     },
     "followUs": {
       "followUs": "关注我们"
