add loading and darkTheme

--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -13,6 +13,7 @@
   },
   "buy-dialog": {
     "title": "Checkout",
+    "blind-title": "Confirm",
     "submit": "Proceed to pay",
     "buy": "Buy",
     "buy-now": "Buy now",
