--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -9,6 +9,7 @@
   },
   "buy-dialog": {
     "title": "Касса",
+    "blind-title": "подтвердить",
     "buy": "Купить",
     "buy-now": "Купить сейчас",
     "submit": "Приступить к оплате",
