--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -16,6 +16,7 @@
     "submit": "继续支付",
     "buy": "购买",
     "title": "确认",
+    "blind-title": "确认",
     "total": "总金额",
     "current": "当前池子"
   },
