--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -213,6 +213,7 @@
   "drops": {
     "previous": "Previous drops",
     "top-creators": "Top Creators",
+    "active": "Active  dr🔥ps",
     "upcoming": "Upcoming  dr🔥ps",
     "label": {
       "live": "Live",
