--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -213,8 +213,8 @@
   "drops": {
     "previous": "Previous drops",
     "top-creators": "Top Creators",
-    "active": "Active  dr🔥ps",
-    "upcoming": "Upcoming  dr🔥ps",
+    "active": "Active",
+    "upcoming": "Upcoming",
     "label": {
       "live": "Live",
       "coming": "Coming",
