--- a/src/modules/i18n/en-US.json
+++ b/src/modules/i18n/en-US.json
@@ -337,7 +337,7 @@
     "put-on-cancel": "Cancel",
     "sold-for": "Sold for",
     "top-bid": "Top Bid",
-    "pool-start-tips": "The pool will start in:",
+    "pool-start-tips": "Sale starting in:",
     "transfer": "Transfer token",
     "lost": "Your bid was lost",
     "won": "Your bid won",
