feature/ FAN-825 modify  drop content

--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -218,7 +218,7 @@
   "drops": {
     "previous": "Previous drops",
     "top-creators": "Top Creators",
-    "upcoming": "Upcoming  dr🔥ps",
+    "upcoming": "Upcoming  Dr🔥ps",
     "label": {
       "live": "Live",
       "coming": "Coming",
