--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -246,7 +246,7 @@
       "collections": "Коллекции",
       "empty": "Результаты не найдены",
       "items": "Товары",
-      "placeholder": "Поиск по имени, автору, коллекции ...",
+      "placeholder": "Поиск по имени, автору ...",
       "users": "Пользователи"
     },
     "select-chain": {
