--- a/src/modules/i18n/zh-CN.json
+++ b/src/modules/i18n/zh-CN.json
@@ -257,7 +257,7 @@
       "collections": "作品集",
       "empty": "无搜索结果",
       "items": "NFT",
-      "placeholder": "按名字/创建者/作品集搜索...",
+      "placeholder": "按名字/创建者搜索...",
       "users": "用户"
     },
     "select-chain": {
