--- a/src/modules/i18n/ru-RU.json
+++ b/src/modules/i18n/ru-RU.json
@@ -486,7 +486,7 @@
       "wrong-reserve-bid-amount": "Убедитесь что минимальная ставка меньше или равна резервной цене"
     },
     "expire": "Время истечёт через {value, date, medium} {value, time, short}",
-    "fee": "Комиссия Fangible {value}%",
+    "fee": "Комиссия MetaApes {value}%",
     "label": {
       "amount": "Количество",
       "count": "Подсчитать",
@@ -507,7 +507,7 @@
       "reservePrice": "Резервная цена будет скрыта. Если вы не получите ставок, равных или превышающих ваш резерв, ваш аукцион не будет продан."
     },
     "royalty": {
-      "platform-fee": "Комиссия Fangible",
+      "platform-fee": "Комиссия MetaApes",
       "royalty-fee": "Плата за роялти",
       "royalty-fee-tip": "Роялти перечисляются создателю НМТ сразу после продажи.",
       "receive-fs": "За каждое издание вы получите",
